swen430as1/tests/valid/real/Real_Valid_02.while
void main() {
    assert 0.123 >= 0.012;
    assert 0.123 > 0.012;
    assert 0.123 >= 0.123;
    assert 0.123 < 1.012;
    assert 0.123 <= 1.012;    
    assert 0.123 <= 0.123;
}
