swen430as1/tests/invalid/real/Real_Invalid_02.while
void main() {
    assert .123 == 0.123;
}
